--- a/website/pages/templates/pages/events.html
+++ b/website/pages/templates/pages/events.html
@@ -29,49 +29,147 @@
 			<div class="event_window">
 				<div class="event_window_content">
 			
-				
+				<div class="mobile_hide_1100">
 			
-				{% for event in events %}
+					{% for event in events %}
+					
+						<table style="width:100%;border-collapse:collapse">
+							<tr>
+								<td style="width:8%"><h3 class="big_date" align="center">{{ event.date | date:"j M" }}</h3></td>
+								<td style="width:50%">
+									<table>
+										<tr>
+											<td style="border-left: 1px solid white; padding-left: 20px">
+												<h3><a href="{% url 'event_detail' pk=event.pk %}" id="event_name_list_big">{{ event.event_name }}</a></h3>
+											</td>
+										</tr>
+									</table>
+								</td>
+								<td rowspan="3">
+									<div class="crop_medium">
+										<a href="{% url 'event_detail' pk=event.pk %}"><img src="{{ event.event_image.url }}" style="width:100%" id="event_img"></a>
+									</div>
+								</td>
+							</tr>
+							<tr>
+								<td colspan="2"><br>
+									<table>
+										<tr>
+											<td style="width:400px"><h4>{{ event.date | date:"D jS F Y" }}<br>{{ event.start_time | date:"H:i" }}-{{ event.end_time | date:"H:i" }}<br>@ {{ event.event_location }}</h4></td>
+											{% if event.rockSoc_event %}
+												<td><img src="{% static 'pages/images/rocksoc_logo.png' %}" style="width:100px"></td>
+											{% endif %}
+										</tr>
+									</table>
+								</td>
+							</tr>
+							<tr>
+								<td colspan="2"><p>{{ event.event_info | truncatechars:200 }}</p></td> <!--urlize-->
+							</tr>
+						</table>
+			
+						{% if forloop.last == False %}
+							<hr style="border-color:rgb(100,100,100);border-style:solid">
+						{% endif %}
 				
-					<table style="width:100%;border-collapse:collapse">
-						<tr>
-							<td style="width:8%"><h3 class="big_date" align="center">{{ event.date | date:"j M" }}</h3></td>
-							<td style="width:50%">
-								<table>
-									<tr>
-										<td style="border-left: 1px solid white; padding-left: 20px"><h3><a href="{% url 'event_detail' pk=event.pk %}" id="event_name_list_big">{{ event.event_name }}</a></h3></td>
-									</tr>
-								</table>
-							</td>
-							<td rowspan="3">
-								<div class="crop_medium">
-									<a href="{% url 'event_detail' pk=event.pk %}"><img src="{{ event.event_image.url }}" style="width:100%" id="event_img"></a>
-								</div>
-							</td>
-						</tr>
-						<tr>
-							<td colspan="2"><br>
-								<table>
-									<tr>
-										<td style="width:400px"><h4>{{ event.date | date:"D jS F Y" }}<br>{{ event.start_time | date:"H:i" }}-{{ event.end_time | date:"H:i" }}<br>@ {{ event.event_location }}</h4></td>
-										{% if event.rockSoc_event %}
-											<td><img src="{% static 'pages/images/rocksoc_logo.png' %}" style="width:100px"></td>
-										{% endif %}
-									</tr>
-								</table>
-							</td>
-						</tr>
-						<tr>
-							<td colspan="2"><p>{{ event.event_info | truncatechars:200 }}</p></td> <!--urlize-->
-						</tr>
-					</table>
+					{% endfor %}
+			
+				</div>
+				
+				<div class="mobile_show_600-1100">
+				
+					{% for event in events %}
+					
+						<table style="width:100%;border-collapse:collapse">
+							<tr>
+								<td style="width:8%"><h3 class="big_date" align="center">{{ event.date | date:"j M" }}</h3></td>
+								<td style="width:50%">
+									<table>
+										<tr>
+											<td style="border-left: 1px solid white; padding-left: 20px">
+												<h3><a href="{% url 'event_detail' pk=event.pk %}" id="event_name_list_big">{{ event.event_name }}</a></h3>
+											</td>
+										</tr>
+									</table>
+								</td>
+								<td rowspan="2">
+									<div class="crop_medium">
+										<a href="{% url 'event_detail' pk=event.pk %}"><img src="{{ event.event_image.url }}" style="width:100%" id="event_img"></a>
+									</div>
+								</td>
+							</tr>
+							<tr>
+								<td colspan="2"><br>
+									<table>
+										<tr>
+											<td ><h4>{{ event.date | date:"D jS F Y" }}<br>{{ event.start_time | date:"H:i" }}-{{ event.end_time | date:"H:i" }}<br>@ {{ event.event_location }}</h4></td>
+										</tr>
+										<tr>
+											{% if event.rockSoc_event %}
+												<td><br><img src="{% static 'pages/images/rocksoc_logo.png' %}" style="width:100px"></td>
+											{% endif %}
+										</tr>
+									</table>
+								</td>
+							</tr>
+							<tr>
+								<td colspan="3"><p>{{ event.event_info | truncatechars:200 }}</p></td> <!--urlize-->
+							</tr>
+						</table>
+			
+						{% if forloop.last == False %}
+							<hr style="border-color:rgb(100,100,100);border-style:solid">
+						{% endif %}
+				
+					{% endfor %}
+
+				</div>
+				
+				<div class="mobile_show_600">
+				
+					{% for event in events %}
+					
+						<table style="width:100%;border-collapse:collapse">
+							<tr>
+								<td style="width:10%"><h3 class="big_date" align="center">{{ event.date | date:"j M" }}</h3></td>
+								<td style="width:50%">
+									<table>
+										<tr>
+											<td style="border-left: 1px solid white; padding-left: 20px">
+												<h3 class="break_all"><a href="{% url 'event_detail' pk=event.pk %}" id="event_name_list_big">{{ event.event_name }}</a></h3>
+											</td>
+										</tr>
+									</table>
+								</td>
+							</tr>
+						</table>
+						<br>
+						<table>
+							<tr>
+								<td><h4>{{ event.date | date:"D jS F Y" }}<br>{{ event.start_time | date:"H:i" }}-{{ event.end_time | date:"H:i" }}<br>@ {{ event.event_location }}</h4></td>
+							</tr>
+						</table>
+						
+						<br>
+						
+						<div class="crop_events_mobile">
+							<a href="{% url 'event_detail' pk=event.pk %}"><img src="{{ event.event_image.url }}" style="width:100%" id="event_img"></a>
+						</div>
+					
+						<br>
+						
+						<p class="break_all">{{ event.event_info | truncatechars:200 }}</p> <!--urlize-->
 		
-					{% if forloop.last == False %}
-						<hr style="border-color:rgb(100,100,100);border-style:solid">
-					{% endif %}
 			
-				{% endfor %}
-			
+						{% if forloop.last == False %}
+							<hr style="border-color:rgb(100,100,100);border-style:solid">
+						{% endif %}
+				
+					{% endfor %}
+
+				</div>
+				
+				
 				</div>
 			</div>
 			
