--- a/website/pages/templates/pages/wus.html
+++ b/website/pages/templates/pages/wus.html
@@ -10,8 +10,21 @@
 				<h1 class="page_title">WAKE UP SCREAMING</h1>
 			</div>
 			
-			<p>The website is currently under refurbishment :)</p>
-			
+			<p>Wake Up Screaming or WUS is Cambridge RockSoc's own club night, which runs every third Friday of the month at the <a href="https://www.facebook.com/QClubCambridge/" class="paragraph_link">Q Club</a>,
+			both in an out of term. It's a great chance to meet up with members of RockSoc and the wider rock and metal community in Cambridge.
+			<br>
+			Entry is £3 for <a href="/about" class="paragraph_link">members</a> and £4 for non-members.<p>
+
+			<h3>DJing at WUS</h3>
+
+			<p>Fancy trying your hand at DJing? Contact the WUS officer. If you have no experience we will put you on first set, and if we like you we 
+			will ask you back. You can also join the DJ mailing list by sending an e-mail to dj-subscribe (at) rocksoc org uk. For more information about DJing, see our DJ information page</p>
+
+			<h3>What do we play?</h3>
+
+			<p>What does rock, metal, and alternative mean? Below is a list of top tracks played at WUS, you can also visit the DJ pages and the WUS event pages to see what has been played. Not 
+			playing everything you would like us to? You can always DJ yourself.</p>
+						
 		</div>
 	</div>
 	
