--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -34,10 +34,11 @@
 			
 			<!--<div class="mobile_hide_600">-->
 				<div class="side_title_backing_wus_small" style="width:40%">
-					<p class="sub_heading_welcome"><a href="" class="paragraph_link">WAKE UP SCREAMING</a></p>
+					<p class="sub_heading_welcome"><a href="/wus" class="paragraph_link">WAKE UP SCREAMING</a></p>
 				</div>
 				
-				<p>This is our club night at the <a href="https://www.facebook.com/QClubCambridge/" class="paragraph_link">Q Club</a>, taking place every third Friday of the month. If you are interested in DJing, contact the WUS officer. No experience is necessary for the first slot!</p>
+				<p>This is our club night at the <a href="https://www.facebook.com/QClubCambridge/" class="paragraph_link">Q Club</a>, taking place every third Friday of the month. If you are 
+				interested in DJing, contact the WUS officer. No experience is necessary for the first slot!</p>
 
 				<!--<p><a href="/events">Pub meets</a></p>-->
 				
