WUS issue resolved hopefully

--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -43,19 +43,19 @@
 				<!--<p><a href="/events">Pub meets</a></p>-->
 				
 				<div class="side_title_backing" style="width:40%">
-					<p style="padding-top:8px;padding-bottom:8px;padding-left:12px"><a href="/events" class="paragraph_link">PUB MEETS</a></p>
+					<p class="sub_heading_welcome"><a href="/events" class="paragraph_link">PUB MEETS</a></p>
 				</div>
 				
 				<p>We meet weekly on a Thursday at a random pub in Cambridge, hailed as “RockSoc on tour”. To find out where our next pub meet is, keep an eye on the events page.</p>
 				
 				<div class="side_title_backing" style="width:40%">
-					<p style="padding-top:8px;padding-bottom:8px;padding-left:12px"><a href="/events" class="paragraph_link">GIGS</a></p>
+					<p class="sub_heading_welcome"><a href="/events" class="paragraph_link">GIGS</a></p>
 				</div>
 				
 				<p>Gigs are organised at least once a term. If you are a band looking for a slot then contact the events officer.</p>
 
 				<div class="side_title_backing" style="width:40%">
-					<p style="padding-top:8px;padding-bottom:8px;padding-left:12px"><a href="/events" class="paragraph_link">OTHER EVENTS</a></p>
+					<p class="sub_heading_welcome"><a href="/events" class="paragraph_link">OTHER EVENTS</a></p>
 				</div>
 				
 				<p>Here are listings of all rock, metal, and alternative events we know about in Cambridge. If you are organising such an event then contact the webmaster to have it added.</p>
