--- a/website/pages/templates/pages/wus.html
+++ b/website/pages/templates/pages/wus.html
@@ -10,8 +10,10 @@
 				<h1 class="page_title">WAKE UP SCREAMING</h1>
 			</div>
 			
+			<h3>What is WUS?</h3>
+			
 			<p>Wake Up Screaming, or WUS, is Cambridge RockSoc's own club night, which runs every third Friday of the month at the <a href="https://www.facebook.com/QClubCambridge/" class="paragraph_link">Q Club</a>,
-			both in an out of term. It's a great chance to meet up with members of RockSoc and the wider rock and metal community in Cambridge.
+			both in and out of term. It's a great chance to meet up with members of RockSoc and the wider rock and metal community in Cambridge.
 			<br>
 			Entry is £3 for <a href="/about" class="paragraph_link">members</a> and £4 for non-members.<p>
 
@@ -113,6 +115,8 @@
 				{% endfor %}
 			
 			<hr>
+			
+			<!--<p>The next WUS will be put here shortly!</p>
 			
 		</div>
 	</div>
