News page almost done

--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -54,7 +54,7 @@
 				
 				<p>Gigs are organised at least once a term. If you are a band looking for a slot then contact the events officer.</p>
 
-				<div class="side_title_backing" style="width:40%">
+				<div class="side_title_backing_wus_small" style="width:40%">
 					<p class="sub_heading_welcome"><a href="/events" class="paragraph_link">OTHER EVENTS</a></p>
 				</div>
 				
