News mobile friendly

--- a/website/pages/templates/pages/news.html
+++ b/website/pages/templates/pages/news.html
@@ -16,60 +16,56 @@
 			
 			<hr>
 			
-			{% for news in news %}
+				<div class="mobile_hide_600">
 				
-				<!--<img class="about_img" src="{{ news.image.url }}"  align="right">
+					{% for news in news %}
 				
-				<h4>{{ news.date | date:"d/m/y" }}</h4>
+						<br>
+						
+						<table style="width:100%;border-collapse:collapse">
+							<tr>
+								<td style="width:58%;vertical-align:top"><h4>{{ news.date | date:"d/m/y" }}</h4>
+								<h3>{{ news.news_title }}</h3>
+								<p>{{ news.info | urlize | linebreaks }}</p></td>
+								<td>
+									<div class="crop_medium" style="margin-bottom:4%">
+										<img src="{{ news.image.url }}" style="width:100%">
+									</div>
+								</td>
+							</tr>
+						</table>
+					
+						<hr>
+					
+					{% endfor %}
 				
-				<h3><a id="event_name_list_big">{{ news.news_title }}</a></h3>
+				</div>
 				
-				<p>{{ news.info | linebreaks }}</p>
-			
-				<table style="width:100%;border-collapse:collapse">
-					<tr>
-						<td style="vertical-align:top">
-							<h4>{{ news.date | date:"d/m/y" }}</h4>
-							<h3>{{ news.news_title }}</h3>
-							<p>{{ news.info | urlize }}</p>
-						</td>
-						<td>
-							<div class="crop_medium">
-								<img src="{{ news.image.url }}" style="width:100%">
-							</div>
-						</td>
-					</tr>
-				</table>
-			
-				<hr>-->
+				<div class="mobile_show_600">
+					
+					{% for news in news %}
+					
+						<br>
+						
+						<table style="width:100%;border-collapse:collapse">
+							<tr>
+								<td style="vertical-align:top"><h4>{{ news.date | date:"d/m/y" }}</h4>
+								<h3>{{ news.news_title }}</h3>
+								</td>
+							</tr>
+						</table>
+						
+						<div class="crop_events_mobile">
+							<img src="{{ news.image.url }}" style="width:100%">
+						</div>	
 				
-				<br>
+						<p>{{ news.info | urlize | linebreaks }}</p>
 				
-				<table style="width:100%;border-collapse:collapse">
-					<tr>
-						<td style="width:58%;vertical-align:top"><h4>{{ news.date | date:"d/m/y" }}</h4>
-						<h3>{{ news.news_title }}</h3>
-						<p>{{ news.info | urlize | linebreaks }}</p></td>
-						<!--<td style="width:50%">
-							<table>
-								<tr>
-									<td style="border-left: 1px solid white; padding-left: 20px">
-										<h3>{{ news.news_title }}</h3>
-									</td>
-								</tr>
-							</table>
-						</td>-->
-						<td>
-							<div class="crop_medium" style="margin-bottom:4%">
-								<img src="{{ news.image.url }}" style="width:100%">
-							</div>
-						</td>
-					</tr>
-				</table>
-			
-				<hr>
-			
-			{% endfor %}
+						<hr>
+				
+					{% endfor %}
+
+				</div>
 			
 			<div>
 				<p align="right">Page {{ news.number }} of {{ news.paginator.num_pages }}</p>
