--- a/website/pages/templates/pages/contact.html
+++ b/website/pages/templates/pages/contact.html
@@ -12,6 +12,13 @@
 			
 			<p>The website is currently under refurbishment :)</p>
 			
+			<!--<form role="form" action="" method="post">
+				{% csrf_token %}
+				{{ form.as_p }}
+				<button type="submit">Submit</button>
+			
+			</form>-->
+			
 		</div>
 	</div>
 	
