--- a/website/pages/templates/pages/wus.html
+++ b/website/pages/templates/pages/wus.html
@@ -27,14 +27,16 @@
 			<p>The remit for WUS is to play rock and alternative music that isn’t otherwise found in Cambridge. We try to maintain a mixture of interesting and esoteric music people might not 
 			have heard before as well as things people will dance to. As such, we try to encourage DJs to play a mixture of things they think will be danceable, that people will enjoy listening 
 			to, and things they find interesting. About the only big thing we try to avoid is music that really isn’t rock or that is widely played elsewhere in Cambridge, for example at 
-			<a href="https://www.facebook.com/TheCallingCambridge/" class="paragraph_link">The Calling</a>, or whatever the current Indie-based night in Cambridge is.</p>
+			<a href="https://www.facebook.com/TheCallingCambridge/" class="paragraph_link">The Calling</a>, or whatever the current Indie-based night is.</p>
 			
 			<h3>Upcoming WUS Events</h3>
+			
+			<p>WUS takes place every third Friday of the month. The next will be advertised here.</p>
 			
 			<hr>
 				
 				{% for event in events %}
-				
+					
 					{% if event.WUS == True %}
 					
 					<div class="mobile_hide_600">
