--- a/website/pages/templates/pages/about.html
+++ b/website/pages/templates/pages/about.html
@@ -17,8 +17,9 @@
 			<h3>What is Cambridge RockSoc?</h3>
 			<p>RockSoc is Cambridge's rock, metal, and alternative society!</p>
 			<p>Our aim is to bring together people interested in rock, metal and alternative music, and to support the alternative scene in Cambridge. To this end we run a 
-			monthly club night: Wake Up Screaming, organise at least one live gig per term, and have weekly pub meets to socialise. We may also organise other events such as 
-			trips to gigs elsewhere, and we attempt to keep a comprehensive record of all rock, metal, and alternative events happening in Cambridge.</p>
+			monthly club night: <a href="/wus" class="paragraph_link">Wake Up Screaming</a>, organise at least one live gig per term, and have weekly pub meets to socialise. We may also 
+			organise other <a href="/events" class="paragraph_link">events</a> such as trips to gigs elsewhere, and we attempt to keep a comprehensive record of all rock, metal, and 
+			alternative events happening in Cambridge.</p>
 			
 			<div class="mobile_show_800">
 				<img class="about_img" src="{% static 'pages/images/robfest.jpg' %}" align="right">
@@ -35,7 +36,7 @@
 			go independent!</p>
 			
 			<h3>How can I join?</h3>
-			<p>Joining is cheap and easy! Membership is £5 for life (quite literally) and gets you the following benefits:</p>
+			<p>Joining is cheap and easy. Membership is £5 for life (quite literally) and gets you the following benefits:</p>
 			
 			<ul style="color:gray;list-style-type:disc">
 				<li>cheaper entry to Wake Up Screaming (£3 instead of £4)</li>
@@ -46,7 +47,10 @@
 			</ul>
 			
 			<p>To join, turn up to one of our events and speak to a member of the committee who will be able to assist.</p>
-
+			
+			<h3>Constitution</h3>
+			<p>For all the fine detail on the running of Cambridge Rocksoc, please consult the <a href="/constitution" class="paragraph_link">constitution</a>.</p>
+				
 		</div>
 	</div>
 	
