--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -143,7 +143,7 @@
 							<br><br>
 							<h4 class="break_all"><a href="/news" id="event_name_list">{{ news.news_title }}</a></h4>
 						</td>
-						<td>
+						<td style="vertical-align:top">
 							<div class="crop_small">
 								<a href="/news"><img src="{{ news.image.url }}" style="width:100%" id="event_img"></a>
 							</div>
@@ -151,7 +151,12 @@
 					</tr>
 				</table>
 				
-				<p class="sidebar_text">{{ news.info | truncatechars:200 }}</p>
+				<!--<p class="sidebar_text">{{ news.info | truncatechars:300 }}</p>-->
+				
+				<table>
+					<td style="width:92%"><p class="sidebar_text">{{ news.info | truncatechars:300 }}</p></td>
+					<td style="vertical-align:bottom"><p><a href="/news" style="text-decoration:none">>></a></p></td>
+				</table>
 			
 		{% endfor %}
 		
