Probs with IE plus slideshow

--- a/website/pages/templates/pages/constitution.html
+++ b/website/pages/templates/pages/constitution.html
@@ -10,7 +10,7 @@
 				<h1 class="page_title">CONSTITUTION</h1>
 			</div>
 			
-			<p>Below you can find the RockSoc constituion in all its glory. Here is where we can settle once and for all any disputes that may arise.</p>
+			<p>Below you can find the RockSoc constituion in all its glory.</p>
 			
 			<h3>Constitution :</h3>
 			
@@ -19,7 +19,7 @@
 				<li>The Society exists to bring together people interested in live and recorded rock music, to arrange preferably rock related social events 
 				within Cambridge and trips to events outside Cambridge.</li>
 				<li>Membership of the Society shall be open to all members of the University of Cambridge and Anglia Ruskin University, as well as to non-members 
-				of the universities. All membership shall be at the committee's discretion. Membership shall be conditional on the payment of a subscription fee, 
+				of either university. All membership shall be at the committee's discretion. Membership shall be conditional on the payment of a subscription fee, 
 				the sum of which shall be decided at the AGM or by an EGM or by a quorate vote of the current RockSoc Committee taken at a committee meeting. 
 				Membership cards shall be issued to all paid-up members, which will entitle them whenever possible to reduced price entry to events organized by 
 				the society.</li>
@@ -29,7 +29,7 @@
 				<ul style="list-style-type:disc">
 					<li style="margin: 10px 0"><i>President</i>: The president has overall responsibility for ensuring the smooth running of the committee and the society as a whole. The president shall act 
 					as chairman of all meetings and has a casting vote in the event of a tie.</li>
-					<li><i>Secretary</i>: The Secretary is responsible for taking and distributing the minutes of all Society meetings and keeping a record of the society's official 
+					<li><i>Secretary</i>: The Secretary is responsible for taking and distributing the minutes of all Society meetings and keeping a record of the Society's official 
 					activities.</li>
 					<li style="margin: 10px 0"><i>Junior Treasurer</i>: The Junior Treasurer is responsible for keeping the Society's financial accounts in order and especially for the audit at the end of 
 					the year.</li>
