--- a/website/pages/templates/pages/wus.html
+++ b/website/pages/templates/pages/wus.html
@@ -31,7 +31,7 @@
 			
 			<h3>Upcoming WUS Events</h3>
 			
-			<p>WUS takes place every third Friday of the month. The next will be advertised here.</p>
+			<p>WUS takes place every third Friday of the month. The next WUS will be advertised here.</p>
 			
 			<hr>
 				
