--- a/website/pages/static/pages/pages.css
+++ b/website/pages/static/pages/pages.css
@@ -271,7 +271,7 @@ html {
 .container {
 	display: grid;
 	display: -ms-grid;
-	}
+}
 
 
 /*.content is for the homepage only. For computer there is no additional padding since this is done for
@@ -333,8 +333,25 @@ individual sections separately. For mobile there is padding since the individual
 		padding-left: 4%;
 		padding-right: 4%;
 		padding-top: 3%;
-		padding-bottom: 6%;
+		padding-bottom: 3%;
 	}
+	
+	@supports (-ms-ime-align:auto) {
+		.content_big {
+			background-image: url("images/fabric_big.png");
+			background-repeat: no-repeat;
+			background-size: 100% 100%;
+			border-style: solid;
+			border-color: white;
+			border-width: 0px;
+			padding-left: 4%;
+			padding-right: 4%;
+			padding-top: 3%;
+			padding-bottom: 3%;
+			height: 100%;
+		}
+	}
+	
 }
 
 
@@ -460,6 +477,22 @@ individual sections separately. For mobile there is padding since the individual
 		padding-right: 6%;
 		padding-top: 3%;
 		padding-bottom: 3%;
+	}
+	
+	/* Microsoft Edge Browser 12+ (All) - @supports method */
+
+	@supports (-ms-ime-align:auto) {
+	.welcome {
+			grid-column: 1 / 2;
+			-ms-grid-column: 1;
+			grid-row: 1 / 3;
+			-ms-grid-row-span: 2;
+			padding-left: 6%;
+			padding-right: 6%;
+			padding-top: 3%;
+			padding-bottom: 3%;
+			height: 100%;
+		}
 	}
 		
 	.upcoming_events {
@@ -720,7 +753,7 @@ table#event_list:hover {
 	/*margin: auto;*/
 	/*width: 98%;*/
 	/*width: 100%;*/
-	height: 290px;
+	max-height: 150px;
 	overflow: hidden;
 	border: 1px solid gray;
 	margin-top: 3%;
@@ -729,6 +762,42 @@ table#event_list:hover {
 	/*padding-top: 20px;*/
 	/*height: 280px;*/
 	/*box-shadow: 0px 0px 5px 1px gray;*/
+}
+
+@media screen and (min-width: 1100px) {
+	.slideshow {
+		/*display: block;*/
+		/*margin: auto;*/
+		/*width: 98%;*/
+		/*width: 100%;*/
+		max-height: 290px;
+		overflow: hidden;
+		border: 1px solid gray;
+		margin-top: 3%;
+		margin-left: 1%;
+		margin-right: 1%;
+		/*padding-top: 20px;*/
+		/*height: 280px;*/
+		/*box-shadow: 0px 0px 5px 1px gray;*/
+	}
+}
+
+@media screen and (min-width: 600px) and (max-width: 1100px){
+	.slideshow {
+		/*display: block;*/
+		/*margin: auto;*/
+		/*width: 98%;*/
+		/*width: 100%;*/
+		max-height: 250px;
+		overflow: hidden;
+		border: 1px solid gray;
+		margin-top: 3%;
+		margin-left: 1%;
+		margin-right: 1%;
+		/*padding-top: 20px;*/
+		/*height: 280px;*/
+		/*box-shadow: 0px 0px 5px 1px gray;*/
+	}
 }
 
 /*#slideshow > div {
@@ -889,3 +958,7 @@ ol#constitution li{
   padding: 3px 8px;
   border-radius: 11px;
 }*/
+
+.slide {
+	display: none;
+}
