--- a/website/pages/templates/pages/base.html
+++ b/website/pages/templates/pages/base.html
@@ -126,19 +126,36 @@
 	</script>
 	
 	<script>
-		var myIndex = 0;
+		var index1 = 0;
 		carousel();
 
 		function carousel() {
 			var i;
-			var x = document.getElementsByClassName("slide");
+			var x = document.getElementsByClassName("slide1");
 			for (i = 0; i < x.length; i++) {
 			   x[i].style.display = "none";  
 			}
-			myIndex++;
-			if (myIndex > x.length) {myIndex = 1}    
-			x[myIndex-1].style.display = "block";  
-			setTimeout(carousel, 3000); // Change image every 2 seconds
+			index1++;
+			if (index1 > x.length) {index1 = 1}    
+			x[index1-1].style.display = "block";  
+			setTimeout(carousel, 3000); 
+		}
+	</script>
+	
+	<script>
+		var index2 = 0;
+		carousel2();
+
+		function carousel2() {
+			var i;
+			var x = document.getElementsByClassName("slide2");
+			for (i = 0; i < x.length; i++) {
+			   x[i].style.display = "none";  
+			}
+			index2++;
+			if (index2 > x.length) {index2 = 1}    
+			x[index2-1].style.display = "block";  
+			setTimeout(carousel2, 2000); 
 		}
 	</script>
 	
