--- a/website/pages/templates/pages/index.html
+++ b/website/pages/templates/pages/index.html
@@ -6,9 +6,10 @@
 		<div class="content welcome">
 			
 			<div class="slideshow mobile_hide_600">
-				<img class="slide" src="{% static 'pages/images/panda.jpg' %}" style="width:100%">
-				<img class="slide" src="{% static 'pages/images/cuthbert.jpg' %}" style="width:100%">
-				<img class="slide" src="{% static 'pages/images/fun.jpg' %}" style="width:100%">
+				<img class="slide1" src="{% static 'pages/images/panda.jpg' %}" style="width:100%">
+				<img class="slide1" src="{% static 'pages/images/robfest2.jpg' %}" style="width:100%">
+				<img class="slide1" src="{% static 'pages/images/curry_night.jpg' %}" style="width:100%">
+				<img class="slide1" src="{% static 'pages/images/fun.jpg' %}" style="width:100%">
 			</div>
 			
 				<!--<div>
@@ -35,7 +36,10 @@
 			<p>Please check out RockSoc on <a href="https://www.facebook.com/groups/camrocksoc" class="paragraph_link">Facebook</a> for the most up-to-date information.<br></p>
 			
 			<div class="slideshow mobile_show_600">
-				<img src="{% static 'pages/images/panda.jpg' %}" style="width:100%">
+				<img class="slide2" src="{% static 'pages/images/panda.jpg' %}" style="width:100%">
+				<img class="slide2" src="{% static 'pages/images/robfest2.jpg' %}" style="width:100%">
+				<img class="slide2" src="{% static 'pages/images/curry_night.jpg' %}" style="width:100%">
+				<img class="slide2" src="{% static 'pages/images/fun.jpg' %}" style="width:100%">
 			</div>
 			
 			<!--<div class="mobile_hide_600">-->
