Changes to slideshow

--- a/website/pages/templates/pages/constitution.html
+++ b/website/pages/templates/pages/constitution.html
@@ -4,13 +4,13 @@
 {% block content %}
 
 	<div class="container">
-		<div class="content_big">
+		<div class="content_constitution">
 			
 			<div class="side_title_backing_big" style="width:100%">
 				<h1 class="page_title">CONSTITUTION</h1>
 			</div>
 			
-			<p>Below you can find the RockSoc constituion in all its glory.</p>
+			<p>Below you can find the RockSoc constituion in all its glory. Here lies the final word on any RockSoc constitution-related disputes.</p>
 			
 			<h3>Constitution :</h3>
 			
