--- a/website/pages/templates/pages/quote.html
+++ b/website/pages/templates/pages/quote.html
@@ -10,7 +10,7 @@
 				<h1 class="page_title">QUOTE!</h1>
 			</div>
 			
-			<p>There are some things that need writing down for the benefit of future generations. Those that are un-minuteable for whatever reason can be found here.</p>
+			<p>There are some things overheard that need writing down for the benefit of future generations. Those that are un-minuteable for whatever reason can be found here.</p>
 			
 		</div>
 	</div>
