--- a/website/pages/static/pages/pages.css
+++ b/website/pages/static/pages/pages.css
@@ -321,6 +321,19 @@ individual sections separately. For mobile there is padding since the individual
 	padding-bottom: 6%;
 }
 
+.content_constitution {
+	background-image: url("images/fabric_extralong.png");
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	border-style: solid;
+	border-color: white;
+	border-width: 0px;
+	padding-left: 8%;
+	padding-right: 8%;
+	padding-top: 3%;
+	padding-bottom: 6%;
+}
+
 @media screen and (min-width:600px) {	
 	.content_big {
 		/*background-color: rgba(0,0,0,0.7);*/
@@ -352,6 +365,34 @@ individual sections separately. For mobile there is padding since the individual
 		}
 	}
 	
+	.content_constitution {
+		background-image: url("images/fabric_big.png");
+		background-repeat: no-repeat;
+		background-size: 100% 100%;
+		border-style: solid;
+		border-color: white;
+		border-width: 0px;
+		padding-left: 4%;
+		padding-right: 4%;
+		padding-top: 3%;
+		padding-bottom: 3%;
+	}
+	
+	@supports (-ms-ime-align:auto) {
+		.content_constitution {
+			background-image: url("images/fabric_big.png");
+			background-repeat: no-repeat;
+			background-size: 100% 100%;
+			border-style: solid;
+			border-color: white;
+			border-width: 0px;
+			padding-left: 4%;
+			padding-right: 4%;
+			padding-top: 3%;
+			padding-bottom: 3%;
+			height: 100%;
+		}
+	}
 }
 
 
@@ -755,7 +796,6 @@ table#event_list:hover {
 	/*width: 100%;*/
 	max-height: 120px;
 	overflow: hidden;
-	border: 1px solid gray;
 	margin-top: 3%;
 	margin-left: 1%;
 	margin-right: 1%;
@@ -772,7 +812,6 @@ table#event_list:hover {
 		/*width: 100%;*/
 		max-height: 290px;
 		overflow: hidden;
-		border: 1px solid gray;
 		margin-top: 3%;
 		margin-left: 1%;
 		margin-right: 1%;
@@ -790,7 +829,7 @@ table#event_list:hover {
 		/*width: 100%;*/
 		max-height: 250px;
 		overflow: hidden;
-		border: 1px solid gray;
+		/*border: 1px solid gray;*/
 		margin-top: 3%;
 		margin-left: 1%;
 		margin-right: 1%;
@@ -808,7 +847,7 @@ table#event_list:hover {
 		/*width: 100%;*/
 		max-height: 160px;
 		overflow: hidden;
-		border: 1px solid gray;
+		/*border: 1px solid gray;*/
 		margin-top: 3%;
 		margin-left: 1%;
 		margin-right: 1%;
