--- a/website/pages/templates/pages/events.html
+++ b/website/pages/templates/pages/events.html
@@ -163,8 +163,13 @@
 					
 						<br>
 						
-						<p class="break_all">{{ event.event_info | truncatechars:200 }}</p> <!--urlize-->
-		
+						<!--<p class="break_all">{{ event.event_info | truncatechars:200 }}</p>-->
+						
+						<table>
+							<td style="width:92%"><p class="break_all">{{ event.event_info | truncatechars:300 }}</p></td>
+							<td style="vertical-align:bottom"><p><a href="{% url 'event_detail' pk=event.pk %}" style="text-decoration:none">>></a></p></td>
+						</table>
+						
 			
 						{% if forloop.last == False %}
 							<hr style="border-color:rgb(100,100,100);border-style:solid">
