--- a/website/pages/static/pages/pages.css
+++ b/website/pages/static/pages/pages.css
@@ -1023,3 +1023,36 @@ ol#constitution li{
 .slide2 {
 	display: none;
 }
+
+.speech_bubble_l {
+	background-image:url("images/speech_bubble_l_2.png");
+	
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	padding-top:4%;
+	padding-left:8%;
+	padding-right:8%;
+	padding-bottom:8%;
+}
+
+.speech_bubble_r {
+	background-image:url("images/speech_bubble_r.png");
+	
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	padding-top:4%;
+	padding-left:8%;
+	padding-right:8%;
+	padding-bottom:8%;
+}
+
+.speech_bubble_content {
+	/*position: relative;*/
+	/*left: 10%;
+	/*top: 20%;
+	/*margin-left: 10%;*/
+}
+
+.quote {
+	/*color: rgb(140,140,140);*/
+}
