--- a/website/pages/templates/pages/quote.html
+++ b/website/pages/templates/pages/quote.html
@@ -11,7 +11,7 @@
 			</div>
 			
 			<p>There are some things that need writing down for the benefit of future generations. Those that are un-minuteable for whatever reason can be found here. Say 
-			something outrageous at one of our events and you might find yourself listed below!</p>
+			something outrageous at one of our events and you might find yourself listed below.</p>
 			
 			{% for quote in quotes %}
 			
