--- a/website/pages/templates/pages/contact.html
+++ b/website/pages/templates/pages/contact.html
@@ -10,8 +10,13 @@
 				<h1 class="page_title">CONTACT</h1>
 			</div>
 			
-			<p>The website is currently under refurbishment :)</p>
+			<p>To contact Rocksoc, either send us an e-mail or talk to us in the pub. Event promoters please make sure to address your e-mail to the events officer, or it probably won’t get looked at.</p>
 			
+			<p>The committee may be contacted via: <a href="mailto:soc-rocksoc-comittee@lists.cam.ac.uk" target="_top" class="paragraph_link">soc-rocksoc-comittee@lists.cam.ac.uk</a></p>
+			
+			<p>Want to make sure you don't miss anything alternative? The best way is to join us on <a href="https://www.facebook.com/groups/camrocksoc" class="paragraph_link">Facebook</a>
+			where you'll find all the latest information. You can also join our mailing list. To do so visit <a href="https://lists.cam.ac.uk/mailman/" class="paragraph_link">lists.cam.ac.uk/mailman/</a>
+			and search for 'rocksoc'.<p>
 			<!--<form role="form" action="" method="post">
 				{% csrf_token %}
 				{{ form.as_p }}
