minor change to contact

--- a/website/pages/templates/pages/contact.html
+++ b/website/pages/templates/pages/contact.html
@@ -15,7 +15,7 @@
 			<p>The committee may be contacted via: <a href="mailto:soc-rocksoc-comittee@lists.cam.ac.uk" target="_top" class="paragraph_link">soc-rocksoc-comittee@lists.cam.ac.uk</a></p>
 			
 			<p>Want to make sure you don't miss anything alternative? The best way is to join us on <a href="https://www.facebook.com/groups/camrocksoc" class="paragraph_link">Facebook</a>
-			where you'll find all the latest information. You can also join our mailing list. To do so visit <a href="https://lists.cam.ac.uk/mailman/" class="paragraph_link">lists.cam.ac.uk/mailman/</a>
+			where you'll find all the latest information. You can also join our mailing list. To do so visit <a href="https://lists.cam.ac.uk/mailman" class="paragraph_link">lists.cam.ac.uk/mailman</a>
 			and search for 'rocksoc'.<p>
 			<!--<form role="form" action="" method="post">
 				{% csrf_token %}
